src/components/Contact/Contact.scss
.contact {
  align-items: center;
  background-image: url(../../images/backgrounds/contact.jpg);
  background-size: cover;
  display: flex;
  height: 100%;

  > .col {
    padding: 150px 0 150px 0;
  }

  .col > .row:not(:last-child) {
    margin-bottom: 40px;
  }

  .row {
    align-items: center;
    justify-content: center;

    h2 {
      color: #fff;
      font-size: 40px;
      font-weight: 700;
      text-align: center;
      text-transform: uppercase;
    }

    svg {
      color: #fff;
      font-size: 4em;
    }

    p {
      margin-bottom: 0;
      text-align: center;
    }
  }

  .social {
    margin-top: 30px;

    > * {
      display: flex;
      justify-content: center;
    }
  }

  footer {
    color: #fff;
    font-size: 20px;
    margin-top: 100px;
  }
}

